策略
给子弹的发射方式添加策略、把策略写在文件上，方便修改坦克发射子弹的方法